# weather-stats

./: CMakeLists.txt  CSVReader.cpp  CSVReader.h  Candlestick.cpp  Candlestick.h  Plotter.cpp  Plotter.h  Predictor.cpp  Predictor.h  README.md  WeatherData.cpp  WeatherData.h  main.cpp  weather_data.csv
